--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Areas/AdminCMS/Views/GameProduct/GameProduct.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Areas/AdminCMS/Views/GameProduct/GameProduct.cshtml
@@ -50,7 +50,7 @@
             <h2 class="mt-3">遊戲商品管理</h2>
         </div>
         <div class="col-6 text-end mt-3">
-            <button class="btn btn-primary" data-bs-toggle="modal" href="#addGProductModalToggle" role="button">
+            <button class="btn btn-success" data-bs-toggle="modal" href="#addGProductModalToggle" role="button">
                 新增遊戲商品
             </button>
         </div>
@@ -67,7 +67,25 @@
                             aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                    <form>
+                    <nav>
+                        <div class="nav nav-tabs" id="nav-tab" role="tablist">
+                            <button class="nav-link active" id="nav-home-tab"
+                                    data-bs-toggle="tab"
+                                    data-bs-target="#gproduct-create-nav-home" type="button"
+                                    role="tab">
+                                基本資料
+                            </button>
+                            <button class="nav-link" id="nav-profile-tab"
+                                    data-bs-toggle="tab"
+                                    data-bs-target="#gproduct-create-nav-pic" type="button"
+                                    role="tab">
+                                圖片
+                            </button>
+                        </div>
+                    </nav>
+                    <div class="tab-content mt-3" id="nav-tabContent">
+                        <div class="tab-pane fade show active"
+                             id="gproduct-create-nav-home">
                         <div class="form-group">
                             <!-- <label>ID：</label> -->
                             <input type="hidden" class="form-control" disabled id="create_id" name="ProductId"
@@ -114,22 +132,28 @@
                             <label>抽獎機率：</label>
                             <input type="text" class="form-control" id="create_rate" name="LotteryProbability">
                         </div>
-
-                        <div class="col-md-12">
-                            <label>圖片</label>
-                            <input type="file" class="form-control" id="create_image" name="Image">
                         </div>
-                        <div class="mt-2">
-                            <img id="preview-createimage" src="" alt="Image Preview" class="w-100 border">
-                        </div>
-                        <button  class="mt-3 btn btn-primary btn-block" name="create-submitButton" id="create-submitButton"
-                                style="width: 100%;">
-                            儲存
-                        </button>
-                    </form>
+                        <div class="tab-pane fade mt-3" id="gproduct-create-nav-pic">
+                            <div class="col-md-12">
+                                <label>圖片</label>
+                                <input type="file" class="form-control" id="create_image" name="Image">
+                            </div>
+                            <div class=" mb-3 align-items-center mt-3">
+                                <label>目前圖片：</label>
+                                <div class="d-flex justify-content-center">
+                                    <img id="preview-createimage" src="" class="w-100 border">
+                                </div>
+                          
+                            <button class="mt-3 btn btn-primary btn-block" name="create-submitButton" id="create-submitButton"
+                                    style="width: 100%;">
+                                儲存
+                            </button>
+                            </div>
                 </div>
             </div>
+                </div>
         </div>
+    </div>
     </div>
     <!---新增遊戲商品 modal-->
 
@@ -179,16 +203,33 @@
                         <div class="modal-dialog modal-dialog-centered">
                             <div class="modal-content">
                                 <div class="modal-header">
-                                    <h5 class="modal-title" id="EditProductModalToggleLabel">編輯 Edit</h5>
+                                    <h5 class="modal-title" id="EditProductModalToggleLabel">編輯遊戲商品資料</h5>
                                     <button type="button" class="btn-close" data-bs-dismiss="modal"
                                             aria-label="Close"></button>
                                 </div>
                                 <div class="modal-body">
+                                    <nav>
+                                        <div class="nav nav-tabs" id="nav-tab" role="tablist">
+                                            <button class="nav-link active" id="nav-home-tab"
+                                                    data-bs-toggle="tab"
+                                                    data-bs-target="#gproduct-edit-nav-home" type="button"
+                                                    role="tab">
+                                                基本資料
+                                            </button>
+                                            <button class="nav-link" id="nav-profile-tab"
+                                                    data-bs-toggle="tab"
+                                                    data-bs-target="#gproduct-edit-nav-pic" type="button"
+                                                    role="tab">
+                                                圖片
+                                            </button>
+                                    </nav>
                                     <!--內容表單-->
-                                    <div class="row">
+                                    <div class="tab-content mt-3" id="nav-tabContent">
+                                        <div class="tab-pane fade show active"
+                                             id="gproduct-edit-nav-home">
                                         <div class="col-md-6">
-                                            <label>ID</label>
-                                            <input type="text" class="form-control" id="editid" readonly disabled name="ProductId">
+                                        <label>ID</label>
+                                        <input type="text" class="form-control" id="editid" readonly disabled name="ProductId">
                                         </div>
                                         <div class="col-md-6">
                                             <label>名稱</label>
@@ -225,7 +266,13 @@
                                             <label>抽獎機率</label>
                                             <input type="text" class="form-control" id="editrate" name="LotteryProbability">
                                         </div>
-                                        <div class="col-md-12">
+                                        <button type="submit" class="mt-3 btn btn-primary btn-block  edit-submitButton" id="edit-submitButton"
+                                                style="width: 100%;">
+                                            儲存
+                                        </button>
+                                    </div>
+                                        <div class="tab-pane fade mt-3" id="gproduct-edit-nav-pic">
+                                        <div class="form-group mb-3">
                                             <label>圖片</label>
                                             <input type="file"  accept="image/*" class="form-control" id="editimage" name="Image">
                                         </div>
@@ -271,8 +318,7 @@
                 }
             });
         });
-
-        //初始化表格==================================================
+        //初始化表格===============================
         var table = $('#GProduct-table').DataTable({
                 language: {
                     url: 'https://cdn.datatables.net/plug-ins/1.13.6/i18n/zh-HANT.json',
@@ -321,13 +367,12 @@
                 { targets: 2, searchable: true },  //第三欄，索引2
             ],
             });
-            //篩選功能=====================
+        //篩選功能=====================
             $('#categoryList').on('change', function () {
                 var filterOption1 = $(this).val();
                 table.column(2).search(filterOption1).draw();
             });
-
-            //編輯============================================
+        //編輯============================================
             $('#GProduct-table').on('click', '.edit-button', function () {
                 let id = $(this).data('id')
                 $.ajax({
@@ -352,7 +397,7 @@
                     }
                 });
             });
-            //編輯圖片部分======================================
+        //編輯圖片部分======================================
             $('#editimage').on('change', function () {
                 const file = this.files[0];
 
@@ -368,10 +413,8 @@
                     alert('請選擇圖片.');
                 }
             });
-
-
         //儲存按鈕==============================
-        $('.edit-submitButton').click(function () {
+            $('.edit-submitButton').click(function () {
             var ProductId = $('#editid').val()
             var ProductName = $('#editname').val();
             var ProductDescription = $('#editdescription').val();
@@ -436,9 +479,28 @@
                 $('#GProduct-table').DataTable().ajax.reload();
             }
         });
+        //新增商品====================
+        //圖片
+        $(document).ready(function () {
+            // 當選擇圖片時，顯示圖片預覽
+            $('#create_image').on('change', function () {
+                const file = this.files[0];
 
-          //新增商品====================
+                if (file && file.type.startsWith('image/')) {
+                    const reader = new FileReader();
+                    reader.onload = function (e) {
+                        $('#preview-createimage').attr('src', e.target.result);
+                    };
+                    reader.readAsDataURL(file);
+                }
+                else {
+                    alert('請選擇圖片.');
+                }
+            });
+        });
             $('#create-submitButton').click(function () {
+            // 清除圖片預覽
+            $('#preview-createimage').attr('src', '');
             const ProductId = $('#create_id').val()
             const ProductName = $('#create_name').val();
             const ProductDescription = $('#create_description').val();
@@ -472,23 +534,8 @@
             if (file) {
                 formData.append("Image", file)
             }
-            //圖片
-            $('#create_image').on('change', function () {
-                const file = this.files[0];
 
-                if (file && file.type.startsWith('image/')) {
-                    const reader = new FileReader();
-
-                    reader.onload = function (e) {
-                        $('#preview-createimage').attr('src', e.target.result);
-                    };
-
-                    reader.readAsDataURL(file);
-                } else {
-                    alert('請選擇圖片.');
-                }
-            });
-            //CreateProduct
+            //CreateProduct-Ajax
             $.ajax({
                 url: "@Url.Action("CreateProduct","GameProduct" , new { area="AdminCMS" })",
                 type: 'POST',
@@ -528,10 +575,10 @@
                 $('#addGProductModalToggle').modal('hide');
                 $('#GProduct-table').DataTable().ajax.reload();
             }
-        });
 
+            });
 
-        //刪除================================================
+        //刪除=======================================
 
         $(document).ready(function () {
             $(document).on("click", ".delete-button", function () {
@@ -556,14 +603,32 @@
                                     console.log("項目已成功刪除");
                                     deleteButton.closest("tr").remove();
                                     $('#GProduct-table').DataTable().ajax.reload();
+                                    showSuccessMessage("刪除成功", response.message);
                                 } else {
                                     console.log("刪除項目失敗。");
+                                    showErrorMessage("刪除失敗", response.message);
                                 }
                             },
                             error: function (error) {
                                 console.log("刪除項目時發生錯誤：", error);
+                                showErrorMessage("刪除時發生錯誤", "請稍後再試。");
                             }
                         });
+                        function showSuccessMessage(title, message) {
+                            Swal.fire({
+                                icon: 'success',
+                                title: title,
+                                text: message
+                            });
+                        }
+
+                        function showErrorMessage(title, message) {
+                            Swal.fire({
+                                icon: 'error',
+                                title: title,
+                                text: message
+                            });
+                        }
                     }
                 });
             });
