-測試 替換動畫

--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Game/Index.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Game/Index.cshtml
@@ -20,7 +20,16 @@
                 <div id="gachaCCoinIcon"></div><p id="gachaTextCCoin">N/A</p>
                 <div id="gachaRubyIcon"></div> <p id="gachaTextRuby">N/A</p>
             </div>
-            <div class="animation-container">
+            <div class="animation-container">             
+                <video controls class="catcha A" style="display:none" autoplay>
+                    <source src="../images/game/gacha/Draw_A.mp4" type="video/mp4" >
+                </video>
+                <video controls class="catcha S" style="display:none" autoplay>
+                     <source src="../images/game/gacha/Draw_S.mp4" type="video/mp4">
+                </video>    
+                <video controls class="catcha SS" style="display:none" autoplay>
+                    <source src="../images/game/gacha/Draw_SS.mp4" type="video/mp4">
+                </video>
                 <img class="catcha SS" src="../images/game/gacha/gacha_Animate_SS.gif" style="display: none; z-index:99;">
                 <img class="catcha S" src="../images/game/gacha/gacha_Animate_S.gif" style="display: none; z-index:99;">
                 <img class="catcha A" src="../images/game/gacha/gacha_Animate_A.gif" style="display: none; z-index:99;">
