※檢查忘記密碼的部分

--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/MemberLogin/ForgetPassword.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/MemberLogin/ForgetPassword.cshtml
@@ -228,7 +228,7 @@
             var UserID = form.elements.Email.value;
 
             // 前端驗證權杖
-            var token = document.getElementsByName("__RequestVerificationToken")[0].value;
+            //var token = document.getElementsByName("__RequestVerificationToken")[0].value;
 
             // 組合表單資料
             var postData = {
