--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/MemberLogin/ResetPassword.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/MemberLogin/ResetPassword.cshtml
@@ -214,7 +214,7 @@
     <!--nav導覽與頁籤使用-->
     <script src="~/js/myScript.js"></script>
     <script>
-
+        $(document).ready(function () {
         $('#resetPwdBtn').click(function () {
             DoResetPwd()
         })
@@ -223,12 +223,6 @@
             var form = document.forms["resetPwdForm"];
             var newPwd = form.elements["NewUserPwd"].value;
             var checkPwd = form.elements["CheckUserPwd"].value;
-
-            //var newPwd = document.querySelector('#NewUserPwd').value;
-            //var checkPwd = document.querySelector('#CheckUserPwd').value;
-
-            console.log(newPwd)
-            console.log(checkPwd)
 
             if (newPwd !== checkPwd) {
                 document.querySelector('#ErrorMsg').innerHTML = "密碼不相符";
@@ -251,6 +245,8 @@
 
             fetch('@Url.Action("DoResetPwd", "MemberLogin")', requestOptions)
                 .then(function (response) {
+                        console.log("Response status code:", response.status); 
+                        console.log(response);
                     if (response.ok) {
                         return response.json();
                     } else {
@@ -258,16 +254,19 @@
                     }
                 })
                 .then(function (data) {
+                        console.log("Response data:", data); 
                     if (data.ErrMsg) {
                         document.querySelector('#ErrorMsg').innerHTML = data.ErrMsg;
                     } else {
                         alert(data.ResultMsg);
+                        location.href = '@Url.Content("~/MemberLogin/Login")';
                     }
                 })
                 .catch(function (error) {
                     document.querySelector('#ErrorMsg').innerHTML = "發生錯誤: " + error.message;
                 });
         }
+        });
 
     </script>
 
