-修改 抽獎新動畫

--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Game/Index.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Game/Index.cshtml
@@ -21,18 +21,10 @@
                 <div id="gachaRubyIcon"></div> <p id="gachaTextRuby">N/A</p>
             </div>
             <div class="animation-container">             
-                <video controls class="catcha A" style="display:none" autoplay>
-                    <source src="../images/game/gacha/Draw_A.mp4" type="video/mp4" >
-                </video>
-                <video controls class="catcha S" style="display:none" autoplay>
-                     <source src="../images/game/gacha/Draw_S.mp4" type="video/mp4">
-                </video>    
-                <video controls class="catcha SS" style="display:none" autoplay>
-                    <source src="../images/game/gacha/Draw_SS.mp4" type="video/mp4">
-                </video>
-                <img class="catcha SS" src="../images/game/gacha/gacha_Animate_SS.gif" style="display: none; z-index:99;">
-                <img class="catcha S" src="../images/game/gacha/gacha_Animate_S.gif" style="display: none; z-index:99;">
-                <img class="catcha A" src="../images/game/gacha/gacha_Animate_A.gif" style="display: none; z-index:99;">
+                <img class="catcha SS" src="../images/game/gacha/SS.gif" style="display: none; z-index:99;">
+                <img class="catcha CATS" src="../images/game/gacha/CATS.gif" style="display: none; z-index:99;">
+                <img class="catcha S" src="../images/game/gacha/S.gif" style="display: none; z-index:99;">
+                <img class="catcha A" src="../images/game/gacha/A.gif" style="display: none; z-index:99;">
             </div>
            
             <div id="summon-buttons">
