--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Areas/AdminCMS/Views/Member/Member.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Areas/AdminCMS/Views/Member/Member.cshtml
@@ -785,12 +785,16 @@
             var emailValue = $(this).data('email'); // 使用data-email屬性來取得email的值
 
             if (isChecked) {
-                $row.addClass('selected-row'); // 添加選中行的背景顏色
+                // 遍歷該行的所有單元格並添加選中樣式
+                $row.find('td').addClass('selected-cell');
+
                 selectedEmails.push(emailValue); // 將email值加入陣列中
 
                 console.log('Selected emails:', selectedEmails);
             } else {
-                $row.removeClass('selected-row'); // 移除選中行的背景顏色
+                // 移除該行的所有單元格的選中樣式
+                $row.find('td').removeClass('selected-cell');
+
                 var index = selectedEmails.indexOf(emailValue);
                 if (index !== -1) {
                     selectedEmails.splice(index, 1); // 從陣列中移除email值
